--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,5 @@
+@import './main-colors.scss';
+
 body {
   min-height: 100%;
   margin: 0;
@@ -15,6 +17,6 @@ body > #root > div {
     flex-basis: 100%;
     flex-grow: 1;
     text-align: center;
-    background-color: lightgreen;
+    background-color: $primary-theme-color;
   }
 }
