--- a/src/styles/main-colors.scss
+++ b/src/styles/main-colors.scss
@@ -2,6 +2,7 @@ $primary-theme-color: #0097d8;
 $secondary-theme-color: white;
 
 $base-text-color: #4a484b;
+$mid-text-color: #6c676d;
 $light-text-color: #afa7a7;
 
 $shadow-color: #4a484b;
