--- a/src/styles/Profile.scss
+++ b/src/styles/Profile.scss
@@ -4,12 +4,17 @@
 #Profile {
   color: $base-text-color;
   display: flex;
+  width: 100%;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 
   .card {
+    display: flex;
+    flex-direction: column;
     margin: 40px;
     width: 60vw;
-    height: 60vh;
+    height: 400px;
     background-color: $secondary-theme-color;
     box-shadow: $shadow;
     border-radius: 25px;
@@ -19,21 +24,57 @@
 .profile-heading {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 
   .profile-heading-left {
     display: flex;
     align-items: center;
-    
+    font-size: 14px;
+    color: $mid-text-color;
+
     h1 {
-      font-size: 45px;
+      font-size: 32px;
       color: $primary-theme-color;
       margin: 0;
       margin-bottom: 10px;
       text-align: left;
     }
+
     .avatar {
       margin: 30px;
       box-shadow: $shadow;
     }
+  }
+
+  .profile-heading-right {
+    margin: 10px;
+    margin-right: 50px;
+
+    h2 {
+      font-weight: normal;
+    }
+
+    .temp-group {
+      display: flex;
+      margin-left: 30px;
+       > * {
+        margin-right: -25px;
+       }
+    }
+  }
+}
+
+.about {
+  h1 {
+    text-align: left;
+    margin-left: 30px;
+    color: $primary-theme-color;
+    margin-bottom: 0;
+  }
+
+  p {
+    text-align: left;
+    margin: 0 24px 0 24px;
+    overflow: hidden;
   }
 }
