--- a/src/styles/Message.scss
+++ b/src/styles/Message.scss
@@ -1,4 +1,5 @@
 @import './main-colors.scss'; 
+@import './utils.scss';
 
 .message {
   width: 200px;
@@ -8,4 +9,6 @@
   background-color: $secondary-theme-color;
   display: flex;
   justify-content: center;
+
+  @include cards;
 }
