--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -1,6 +1,8 @@
 @import 'main-colors';
 
 #Menu {
+  font-family: Yellowtail;
+  font-stretch: extra-condensed;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -14,11 +16,13 @@
   color: $base-text-color;
   
   #lower-menu {
+    font-family: poppins;
     margin-top: auto;
   }
 
   .link-list {
     display: flex;
     flex-direction: column;
+    font-family: poppins;
   }
 }
