--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -18,5 +18,6 @@ body > #root > div {
     flex-grow: 1;
     text-align: center;
     background-color: $primary-theme-color;
+    overflow-y: scroll;
   }
 }
