--- a/src/styles/Channel.scss
+++ b/src/styles/Channel.scss
@@ -1,11 +1,17 @@
 .channel {
   display: flex;
   flex-direction: column;
-  height: 100vh;
   align-items: center;
+  margin-bottom: 80px;
 
   .chat-bar {
+    position: absolute;
+    bottom: 0;
+
+    width: 60vw;
+    overflow-x: hidden;
     padding: 10px;
     margin-top: auto;
+    background-color: rgba(255, 255, 255, 0.5);
   }
 }
