Changed color of squirl and removed underlining

--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -2,27 +2,32 @@
 
 #Menu {
   font-family: Yellowtail;
-  font-stretch: extra-condensed;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   width: 180px;
-
+  text-decoration: none;
   padding: 1rem;
   position: sticky;
   top: 0;
 
   background-color: $secondary-theme-color;
-  color: $base-text-color;
+  color: $primary-theme-color;
   
   #lower-menu {
     font-family: poppins;
     margin-top: auto;
+    text-decoration: none;
   }
 
   .link-list {
     display: flex;
     flex-direction: column;
     font-family: poppins;
+    text-decoration: none;
+  }
+
+   a {
+    text-decoration: none;
   }
 }
