--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -19,4 +19,27 @@ body > #root > div {
     text-align: center;
     background-color: $primary-theme-color;
   }
+
+  input {
+    border: 2px solid lightgray;
+    border-radius: 3px;
+    margin: 5px 10px;
+    background-color: lightgray;
+  }
+
+  button {
+    color: #0097d8;
+    border: 1px solid white;
+    border-radius: 10px;
+    font-family: Londrina Solid;
+  }
+
+  form {
+    font-family: Londrina Solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 250px;
+    color: white;
+  }
 }
