made post request for user sign up

--- a/src/styles/Message.scss
+++ b/src/styles/Message.scss
@@ -9,6 +9,7 @@
   background-color: $secondary-theme-color;
   display: flex;
   justify-content: center;
+  word-wrap: break-word;
 
   @include cards;
 }
