preparing for heroku deployment

--- a/src/styles/Channel.scss
+++ b/src/styles/Channel.scss
@@ -1,17 +1,25 @@
+@import './main-colors.scss';
+
 .channel {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 80px;
+  overflow: hidden;
 
   .chat-bar {
     position: absolute;
     bottom: 0;
-
-    width: 60vw;
+    z-index: 2;
+    width: 100%;
     overflow-x: hidden;
     padding: 10px;
     margin-top: auto;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
+
+    button {
+      background-color: $primary-theme-color;
+      color: white;
+    }
   }
 }
