--- a/src/styles/Profile.scss
+++ b/src/styles/Profile.scss
@@ -8,12 +8,29 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  justify-content: center;
+
 
   .card {
-    width: 60vw;
-    height: 400px;
     margin: 40px;
     @include cards;
+  }
+
+  .profile-card {
+    width: 60vw;
+    height: 400px;
+  }
+
+  button {
+    width: 200px;
+    background-color: $primary-theme-color;
+    color: white;
+    align-self: center;
+  }
+  
+  .danger {
+    margin-top: 20px;
+    background-color: red;
   }
 }
 
@@ -69,8 +86,31 @@
   }
 
   p {
+    font-size: 20px;
     text-align: left;
     margin: 0 24px 0 24px;
     overflow: hidden;
   }
 }
+
+.update-card {
+
+    h1 {
+      margin: 5px;
+    }
+    padding: 40px;
+    padding-bottom: 30px;
+
+    form {
+      display: flex;
+      flex-direction: column;
+
+      .profile-form {
+        display: flex;
+
+        .info-section > * {
+          text-align: left;
+        }
+      }
+    }
+  }
