--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,6 +4,7 @@ body {
   min-height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 body > #root > div {
@@ -12,6 +13,7 @@ body > #root > div {
 
 #App {
   display: flex;
+  color: $base-text-color;
 
   #main-area {
     flex-basis: 100%;
@@ -21,26 +23,26 @@ body > #root > div {
     overflow-y: scroll;
   }
 
-  input {
+  input,
+  textarea {
+    font-family: Londrina Solid;
+    font-size: 20px;
+    color: $base-text-color;
     border: 2px solid lightgray;
-    border-radius: 3px;
+    border-radius: 10px;
     margin: 5px 10px;
     background-color: lightgray;
   }
 
   button {
-    color: #0097d8;
-    border: 1px solid white;
-    border-radius: 10px;
+    font-size: 20px;
+    border: 0;
+    border-radius: 5px;
+    padding: 10px;
     font-family: Londrina Solid;
   }
 
   form {
     font-family: Londrina Solid;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 250px;
-    color: white;
   }
 }
