--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -10,6 +10,7 @@
   padding: 1rem;
   position: sticky;
   top: 0;
+  z-index: 3;
 
   background-color: $secondary-theme-color;
   color: $primary-theme-color;
@@ -29,12 +30,18 @@
   }
 
    a {
+    font-size: 20px;
     text-decoration: none;
     color: $base-text-color;
     margin-bottom: 5px;
   }
 
   h1 {
-    font-size: xxx-large;
+    text-align: center;
+    width: 100%;
+    margin: 0;
+    margin-left: -10px;
+    margin-top: -15px;
+    font-size: 50px;
   }
 }
